--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,14 @@ __pycache__
 data/
 # C extensions
 *.so
-
+code/output
 # Distribution / packaging
 .Python
 build/
 develop-eggs/
 dist/
 downloads/
+output/
 eggs/
 .eggs/
 lib/
